Bug #9317: Wrong count for tables in INFORMATION_SCHEMA   there was no check of result of   table->file->write_row() function. When count of rows was   more than table max_rows(HEAP table) the following recodrs   were not inserted to the table   -'schema_table_store_record' function is added.     The function checks result of write_row function     and convert HEAP table to MyISAM if necessary   - Result check after write_row is added into all     I_S function which store the records to I_S tables

mysql-test/r/information_schema.result:
  Bug #9317: Wrong count for tables in INFORMATION_SCHEMA
mysql-test/t/information_schema.test:
  Bug #9317: Wrong count for tables in INFORMATION_SCHEMA
sql/sql_select.cc:
  Bug #9317: Wrong count for tables in INFORMATION_SCHEMA
sql/sql_show.cc:
  Bug #9317: Wrong count for tables in INFORMATION_SCHEMA
sql/table.h:
  Bug #9317: Wrong count for tables in INFORMATION_SCHEMA